# api

./: .dockerignore  Dockerfile  REA  README.md  crud.py  main.py  models.py  pyproject.toml  schemas.py  test_crud.py  test_main.py
sdk/: README.md  pyproject.toml
sdk/src/swcpy/: __init__.py  swc_client.py  swc_config.py
sdk/src/swcpy/schemas/: schemas.py
