[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.1"
authors = [
    { name="Josefine Lantz" },
]
description = "Example SDK"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
]