[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swcpy"
version = "0.0.2"
authors = [
    { name="Josefine Lantz" },
]
description = "Example SDK"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Programming Language :: Python :: 3", 
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
]
dependencies = [
    'pytest>=8.1',
    'httpx>=0.27.0',
    "dotenv>=0.9.9",
    "backoff>=2.2.1",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pyarrow>=22.0.0",
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "swcpy",
]

[tool.uv.sources]
swcpy = { workspace = true }
